--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -1,15 +1,40 @@
 {% extends "base_internal.html" %}
 
 {% block content %}
-
-      <form class="form form-newpost" method="post">
+      <form class="form form-newpost" enctype="multipart/form-data" method="post">
         <h1 class="form-heading">New Post</h1>
-        <input type="text" class="form-control" name="subject" value="{{ subject }}" placeholder="Subject" required autofocus>
-        <textarea rows="10" class="form-control" name="content" placeholder="Content" required>{{ content }}</textarea>
+        <div class="form-group">
+          <input type="text" class="form-control" name="subject" value="{{ subject }}" placeholder="Subject" required autofocus>
+          <textarea rows="10" class="form-control" name="content" placeholder="Content" required>{{ content }}</textarea>
+        </div>
+        <div class="form-group">
+          <label class="label label-success">Image:</label>
+          <input type="file" name="img">
+        </div>
+        <div class="form-group">
+          <label class="label label-success">Category:</label>
+          <div class="radio">
+            <label>
+              <input type="radio" name="tag" value="shopping">
+              Shopping
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="tag" value="travel">
+              Travel
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="tag" value="cooking">
+              Cooking
+            </label>
+          </div>
+        </div>
         <div style="color: red">{{ error }}</div>
         <button class="btn btn-lg btn-success btn-block" type="submit">Submit</button>
         <div class="center"><a href="/dashboard">Back to Dashboard</a><div>
       </form>
-
 {% endblock %}
 
